fix second layer image alignment

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -90,7 +90,6 @@
     .second-layer-images {
         position: absolute;
         width: 100vw;
-        top: 34vh;
         max-height: 100%;
         z-index: 10;
     }
